docs(website): corrected CSS so that the logo displays properly in the API docs
re #1197

--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -26,7 +26,8 @@
   /*--docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.9);*/
 }
 
-.navbar__title {
+.navbar__title,
+.main-wrapper aside > div > a > b {
   /* Replaced by Serenity/JS logo SVG */
   display: none;
 }
