--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -46,8 +46,9 @@
   --ifm-color-primary-lighter: #fcda31;
   --ifm-color-primary-lightest: #fde158;
   --ifm-background-color: #22272e;
-
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+  --ifm-color-success-contrast-background: rgba(70,149,74,0.2) !important;
 }
 
 /*
