--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -79,18 +79,17 @@ html.plugin-typedoc-api .theme-doc-sidebar-menu > li:first-child::before {
 }
 
 html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(3)::before {
-  content: 'Test runner adapters';
-}
-
-html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(7)::before {
   content: 'Web Testing';
 }
 
-html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(11)::before {
+html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(7)::before {
   content: 'REST API Testing';
 }
 
-html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(13)::before {
+html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(9)::before {
   content: 'Reporting';
 }
 
+html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(11)::before {
+  content: 'Test runners';
+}
