docs(website): enabled Giscus comments
comments should help us gather feedback from the community and make the articles more relevant and
useful

--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -93,3 +93,8 @@ html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(9)::before {
 html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(11)::before {
   content: 'Test runners';
 }
+
+#giscus-comments {
+  display: block;
+  margin-top: 50px;
+}
