--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -98,3 +98,10 @@ html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(11)::before {
   display: block;
   margin-top: 50px;
 }
+
+.docusaurus-mermaid-container  {
+  background-color: var(--ifm-pre-background);
+  border-radius: var(--ifm-pre-border-radius);
+  text-align: center;
+  padding-top: 10px;
+}
