--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -100,8 +100,28 @@ html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(11)::before {
 }
 
 .docusaurus-mermaid-container  {
-  background-color: var(--ifm-pre-background);
+  background-color: var(--ifm-code-background);
+  /*background-color: rgb(246, 247, 248);*/
   border-radius: var(--ifm-pre-border-radius);
   text-align: center;
   padding-top: 10px;
+}
+
+.docusaurus-mermaid-container svg g.edgeLabel > .label {
+  font-size: 0.75em !important;
+}
+
+.docusaurus-mermaid-container .socket > rect {
+  stroke-dasharray: 5 5;
+}
+
+.docusaurus-mermaid-container .flowchart-link {
+  stroke: var(--ifm-color-primary) !important;
+  opacity: .9;
+}
+
+.docusaurus-mermaid-container #flowchart-pointEnd {
+  stroke: var(--ifm-color-primary) !important;
+  fill: var(--ifm-color-primary) !important;
+  opacity: 0.95;
 }
