--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -125,3 +125,7 @@ html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(11)::before {
   fill: var(--ifm-color-primary) !important;
   opacity: 0.95;
 }
+
+.docusaurus-mermaid-container .edgeLabel {
+  padding: 5px;
+}
