docs(website): finished section on "Modelling a workflow using reusable activities"

--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -67,7 +67,7 @@
   color: #fcd30a;
 }
 
-aside.theme-doc-sidebar-container img {
+[data-theme='light'] aside.theme-doc-sidebar-container img {
   content:url('/images/serenity-js-logo-for-light-backgrounds.svg');
 }
 
