docs(website): corrected layout issue caused by upgrading to Docusaurus 2.3.0

--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -27,7 +27,7 @@
 }
 
 .navbar__title,
-.main-wrapper aside > div > a > b {
+.main-wrapper > div > aside > div > div > a > b {
   /* Replaced by Serenity/JS logo SVG */
   display: none;
 }
