--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -110,7 +110,7 @@ html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(11)::before {
 }
 
 .docusaurus-mermaid-container {
-    background-color: var(--ifm-code-background);
+    background-color: #ffffff;
     /*background-color: rgb(246, 247, 248);*/
     border-radius: var(--ifm-pre-border-radius);
     text-align: center;
