--- a/documentation/serenity-js.org/src/css/custom.css
+++ b/documentation/serenity-js.org/src/css/custom.css
@@ -117,6 +117,11 @@ html.plugin-typedoc-api .theme-doc-sidebar-menu > li:nth-child(11)::before {
     padding-top: 10px;
 }
 
+.docusaurus-mermaid-container svg {
+    display: block;
+    margin: 0 auto;
+}
+
 .docusaurus-mermaid-container svg g.edgeLabel > .label {
     font-size: 0.75em !important;
 }
@@ -158,4 +163,9 @@ blockquote:before {
 
 blockquote p {
     padding-left: 2em;
+}
+
+@media print {
+    #giscus-comments { display: none; }
+    .theme-doc-footer { display: none; }
 }
