docs(website): minor layout fixes

--- a/documentation/serenity-js.org/src/components/AuthorBio/styles.module.css
+++ b/documentation/serenity-js.org/src/components/AuthorBio/styles.module.css
@@ -12,11 +12,11 @@
 img {
     max-width: 100%;
     height: auto;
+    align-self: start;
 }
 
 @media (max-width: 650px) {
     .authorBio {
         display: block;
     }
-
 }
