docs(website): tweaked author bio CSS

--- a/documentation/serenity-js.org/src/components/AuthorBio/styles.module.css
+++ b/documentation/serenity-js.org/src/components/AuthorBio/styles.module.css
@@ -9,7 +9,7 @@
     /*font: 500 100%/1.5 system-ui;*/
 }
 
-img {
+.authorBio img {
     max-width: 100%;
     height: auto;
     align-self: start;
