docs(website): announced the meet-up

--- a/documentation/serenity-js.org/src/css/custom.scss
+++ b/documentation/serenity-js.org/src/css/custom.scss
@@ -137,6 +137,14 @@
 }
 
 /*
+ * Announcement bar
+ */
+div[class^='announcementBar_'] {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/*
  * API docs
  */
 html.plugin-typedoc-api .theme-doc-sidebar-menu > li::before {
